project overlap with header fixed

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,7 @@ html, body, p, a, h1, h2, h3, h4, h5, h6 {
 	padding: 0px;
 	color: white;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  z-index: 1;
 }
 
 body {
@@ -26,6 +27,7 @@ header {
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
+  z-index: 3;
 }
 
 .separater {
@@ -121,6 +123,8 @@ div.Projects a {
 
 div.Projects a:hover {
 	transform: scale(0.95);
+  position: relative;
+  z-index: 0;
 }
 
 div.Projects a img {
